--- a/buscador.html
+++ b/buscador.html
@@ -37,8 +37,29 @@
 
 					</header>
 					<div class="box">
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>			
-						<h1>ESTAMOS EN OBRAS... </h1>
+						
+						<form method="post" action="#">
+							<div class="row gtr-50 gtr-uniform">
+								<div class="col-6 col-12-mobilep">
+									<input type="text" name="origen" id="origen" value="" placeholder="Origen" />
+								</div>
+								<div class="col-6 col-12-mobilep">
+									<input type="text" name="destino" id="destino" value="" placeholder="Destino" />
+								</div>
+								<div class="col-6 col-12-mobilep" >
+									<p type="text">Elije la fecha de inicio: 
+										<input type="date" id="start" name="trip-start" >
+									</p>
+								</div>
+							</div>
+							<br>
+							<div class="col-12">
+								<ul class="actions special">
+									<li><input type="submit" value="Buscar" /></li>
+								</ul>
+							</div>
+						</form>	
+							
 					</div>
 				</section>
 
