--- a/buscador.html
+++ b/buscador.html
@@ -6,13 +6,14 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/propio.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="home.php">IVELITE</a> tu agencia de viajes.</h1>
+					<h1> <a href="">IVELITE</a> tu agencia de viajes.</h1>
 					<nav id="nav">
 						<ul>
 							<li>
@@ -23,6 +24,8 @@
 									<li><a href="foro.html">Foro</a></li>
 									<li><a href="nosotros.html">Sobre nosotros</a></li>
 									<li><a href="guiasturisticas.html">Guias Turisticas</a></li>
+									<li><a href="micuenta.html">Mi cuenta</a></li>
+
 								</ul>
 							</li>
 						</ul>
@@ -46,10 +49,12 @@
 								<div class="col-6 col-12-mobilep">
 									<input type="text" name="destino" id="destino" value="" placeholder="Destino" />
 								</div>
-								<div class="col-6 col-12-mobilep" >
-									<p type="text">Elije la fecha de inicio: 
-										<input type="date" id="start" name="trip-start" >
-									</p>
+								<div class="col-12" >
+									<div class="centro">
+										<p type="text">Elije la fecha de inicio: 
+											<input type="date" id="start" name="trip-start" >
+										</p>
+									</div>	
 								</div>
 							</div>
 							<br>
