--- a/micuenta.html
+++ b/micuenta.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/propio.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -32,21 +33,13 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
+						<br>
 						<h2>Bienvenido a tu cuenta</h2>
 					</header>
-					<div class="row">
-						<div class="col-12">
-
-							<!-- Text -->
-								<section class="box">
-								<center>
-									<li><a href="home.php" class="button primary">Cambiar Nombre</a></li> <br>
-									<li><a href="home.php" class="button primary">Cambiar Contraseña</a></li> <br>
-									<li><a href="home.php" class="button primary">Eliminar Cuenta</a></li> <br>	
-								</center>						
-								</section>
-
-						</div>
+					<div class="centro">
+						<a href="home.php" class="button">Cambiar Nombre</a> &nbsp;&nbsp;
+						<a href="home.php" class="button">Cambiar Contraseña</a> &nbsp;&nbsp;
+						<a href="home.php" class="button">Eliminar Cuenta</a>
 					</div>
 					<div class="row">
 						<div class="col-12">
