Añadido buscador a las paginas iniciales y algun retoque mas, hay que darle caña

--- a/contacto.html
+++ b/contacto.html
@@ -11,15 +11,13 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="buscador.html">IVELITE</a> tu agencia de viajes</h1>
+					<h1><a href="home.php">IVELITE</a> tu agencia de viajes</h1>
 					<nav id="nav">
 						<ul>
 							<li>
 								<a href="#" class="icon solid fa-angle-down">Menú</a>
 								<ul>									
 									<li><a href="micuenta.html">Mi cuenta</a></li>
-									<li><a href="buscador.html">Buscador</a></li>
-									<li><a href="contacto.html">Contacto</a></li>
 									<li><a href="foro.html">Foro</a></li>
 									<li><a href="nosotros.html">Sobre nosotros</a></li>
 									<li><a href="guiasturisticas.html">Guias Turisticas</a></li>
