--- a/buscador.html
+++ b/buscador.html
@@ -13,7 +13,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1> <a href="buscador.html">IVELITE</a> tu agencia de viajes.</h1>
+					<h1> <a href="home.php">IVELITE</a> tu agencia de viajes.</h1>
 					<nav id="nav">
 						<ul>
 							<li>
@@ -38,15 +38,14 @@
 						<p>Encuentra tu vuelo.</p>
 
 					</header>
-					<div class="box">
-						
+					<div class="newbox"> 	<!-- LA CLASE NEWBOX ES CREADA DE CERO -->
 						<form method="post" action="#">
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-6 col-12-mobilep">
-									<input type="text" name="origen" id="origen" value="" placeholder="Origen" />
+									<input type="textbuscador" name="origen" id="origen" value="" placeholder="Origen" />
 								</div>
 								<div class="col-6 col-12-mobilep">
-									<input type="text" name="destino" id="destino" value="" placeholder="Destino" />
+									<input type="textbuscador" name="destino" id="destino" value="" placeholder="Destino" />
 								</div>
 								<div class="col-12" >
 									<div class="centro">
@@ -62,8 +61,7 @@
 									<li><input type="submit" value="Buscar" /></li>
 								</ul>
 							</div>
-						</form>	
-							
+						</form>		
 					</div>
 				</section>
 
