Añadidas carpetas y algunos retoquillos

--- a/micuenta.html
+++ b/micuenta.html
@@ -29,10 +29,12 @@
 				</header>
 
 			<!-- Main -->
+			
 				<section id="main" class="container">
 					<header>
 						<br>
 						<h2>Bienvenido a tu cuenta</h2>
+						<h1>¿Que desea hacer?</h1>
 					</header>
 					<div class="centro">
 						<a href="home.php" class="button">Cambiar Nombre</a> &nbsp;&nbsp;
@@ -40,16 +42,14 @@
 						<a href="home.php" class="button">Eliminar Cuenta</a>
 					</div>
 					<div class="row">
-						<div class="col-12">
-
-							
+						<div class="col-12">		
 				</section>
 
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 				</footer>
 			<!-- end Footer -->
