--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
 
 			<!-- Header -->
 				<header id="header">
-					<h1><a href="home.php">IVELITE</a> tu agencia de viajes</h1>
+					<h1><a href="index.php">IVELITE</a> tu agencia de viajes</h1>
 					<nav id="nav">
 						<ul>
 							<li>
@@ -61,8 +61,8 @@
 			<!-- Footer -->
 				<footer id="footer">
 					<ul class="icons">
-						<li><a href="https://www.facebook.com/" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.facebook.com/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 					</ul>
 				</footer>
 
