--- a/micuenta.html
+++ b/micuenta.html
@@ -37,9 +37,9 @@
 						<h1>¿Que desea hacer?</h1>
 					</header>
 					<div class="centro">
-						<a href="home.php" class="button">Cambiar Nombre</a> &nbsp;&nbsp;
-						<a href="home.php" class="button">Cambiar Contraseña</a> &nbsp;&nbsp;
-						<a href="home.php" class="button">Eliminar Cuenta</a>
+						<a href="/assets/account/cambiarNombre.php" class="button">Cambiar Nombre</a> &nbsp;&nbsp;
+						<a href="/assets/account/cambiarPass.php" class="button">Cambiar Contraseña</a> &nbsp;&nbsp;
+						<a href="/assets/accounT/eliminarCuenta.php" class="button">Eliminar Cuenta</a>
 					</div>
 					<div class="row">
 						<div class="col-12">		
