--- a/micuenta.html
+++ b/micuenta.html
@@ -38,8 +38,8 @@
 						<h1>¿Que desea hacer?</h1>
 					</header>
 					<div class="centro">
-						<a href="assets/account/cambiarNombre.php" class="button">Cambiar Nombre</a> &nbsp;&nbsp;
-						<a href="assets/account/cambiarPass.php" class="button">Cambiar Contraseña</a> &nbsp;&nbsp;
+						<a href="assets/account/cambiarNombre.php" class="button">Cambiar Nombre</a> 
+						<a href="assets/account/cambiarPass.php" class="button">Cambiar Contraseña</a> 
 						<a href="assets/accounT/eliminarCuenta.php" class="button">Eliminar Cuenta</a>
 					</div>
 					<div class="row">
