--- a/guiasturisticas.html
+++ b/guiasturisticas.html
@@ -10,6 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/propio.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -35,33 +36,38 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Nuestra parte de Guias Turisticas</h2>
-						<h2>Estamos en obras...</h2>
+						<h2>Guías Turísticas</h2>
 					</header>
-					<div class="row">
-						<div class="col-12">
-
-							<!-- Text -->
-								<section class="box">
-																	
-								</section>
-
+					<div class="box">						
+						<div class="row">
+							<div class="col-6">
+								<a target="_blank" href="madrid.html">
+									<img src="images/madrid.jpg"  width="500" height="300">
+								</a>							
+							</div>
+							<div class="col-6">
+								<a href="">
+									<img src="images/zaragoza.jpg" width="500" height="300">
+								</a>												
+							</div>
 						</div>
-					</div>
-					<div class="row">
-						<div class="col-12">
+						<br>
+						<div class="row">
+							<div class="col-6">									
+								<a target="_blank" href="">
+									<img src="images/barcelona.jpg" width="500" height="300">
+								</a>																
+							</div>
+							<div class="col-6">								
+								<a target="_blank" href="">
+									<img src="images/ibiza.jpg" width="500" height="300">
+								</a>	
+							</div>						
+						</div>					
+					</div>							
+					</section>
 
-							
-				</section>
-
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="https://www.facebook.com/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-						<li><a href="https://www.instagram.com/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-					</ul>
-				</footer>
-			<!-- end Footer -->
+			
 
 		</div>
 
