--- a/madrid.html
+++ b/madrid.html
@@ -30,6 +30,7 @@
 				</header>
 
 			<!-- Main -->
+			<div class="box">
 				<section id="main" class="container">
 					<header>
 						<h2>Guías Turísticas</h2>
@@ -64,9 +65,8 @@
 					<span class="dot" onclick="currentSlide(2)"></span>
 					<span class="dot" onclick="currentSlide(3)"></span>
 					</div>
-				</section>
-
-			
+				</section>		
+			</div>
 
 		</div>
 		
