--- a/madrid.html
+++ b/madrid.html
@@ -7,68 +7,67 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/propio.css" />
+		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body class="is-preload">
-		<div id="page-wrapper">
-
-			<!-- Header -->
-				<header id="header">
-					<h1><a href="home.php">IVELITE</a> tu agencia de viajes.</h1>
-					<nav id="nav">
-						<ul>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">Menú</a>
-								<ul>
-									<li><a href="micuenta.html">Mi cuenta</a></li>
-									<li><a href="contacto.html">Contacto</a></li>
-									<li><a href="foro.html">Foro</a></li>
-									<li><a href="nosotros.html">Sobre nosotros</a></li>
-								</ul>
-							</li>
-						</ul>
-					</nav>
-				</header>
-
-			<!-- Main -->
-			<div class="box">
-				<section id="main" class="container">
-					<header>
-						<h2>Guías Turísticas</h2>
+		
+			<div id="page-wrapper">
+				<!-- Header -->
+					<header id="header">
+						<h1><a href="home.php">IVELITE</a> tu agencia de viajes.</h1>
+						<nav id="nav">
+							<ul>
+								<li>
+									<a href="#" class="icon solid fa-angle-down">Menú</a>
+									<ul>
+										<li><a href="micuenta.html">Mi cuenta</a></li>
+										<li><a href="contacto.html">Contacto</a></li>
+										<li><a href="foro.html">Foro</a></li>
+										<li><a href="nosotros.html">Sobre nosotros</a></li>
+									</ul>
+								</li>
+							</ul>
+						</nav>
 					</header>
-					<!-- Slideshow container -->
-					<div class="slideshow-container">
-						<!-- Full-width images with number and caption text -->
-						<div class="mySlides fade">
-							<div class="numbertext">1 / 3</div>
-							<img src="images/madrid1.jpg" style="width:100%">
-							<div class="text">Caption Text</div>
-						</div>		
-						<div class="mySlides fade">
-							<div class="numbertext">2 / 3</div>
-							<img src="images/madrid2.jpg" style="width:100%">
-							<div class="text">Caption Two</div>
-						</div>		
-						<div class="mySlides fade">
-							<div class="numbertext">3 / 3</div>
-							<img src="images/madrid3.jpg" style="width:100%">
-							<div class="text">Caption Three</div>
-						</div>	
-						<!-- Next and previous buttons -->
-						<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-						<a class="next" onclick="plusSlides(1)">&#10095;</a>
-					</div>
 					<br>
-
-					<!-- The dots/circles -->
-					<div style="text-align:center">
-					<span class="dot" onclick="currentSlide(1)"></span>
-					<span class="dot" onclick="currentSlide(2)"></span>
-					<span class="dot" onclick="currentSlide(3)"></span>
+					<br> 	
+				<!-- Main -->
+								
+				<div class="row">
+					<div class="col-4">
+						<div class="box">
+							<img src="images/lado1.jpg" style="width:100%">
+						</div>
 					</div>
-				</section>		
+					<div class="col">
+						<div class="box">
+							<div class="w3-content w3-display-container" style="max-width:500px">
+								<img class="mySlides" src="images/madrid.jpg" style="width:100%">
+								<img class="mySlides" src="images/barcelona2.jpg" style="width:100%">
+								<img class="mySlides" src="images/barcelona3.jpg" style="width:100%">
+								<div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
+									<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
+									<div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
+									<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(1)"></span>
+									<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(2)"></span>
+									<span class="w3-badge demo w3-border w3-transparent w3-hover-white" onclick="currentDiv(3)"></span>
+								</div>
+							</div>	
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="box">
+							<img src="images/lado2.jpg" style="width:100%">
+						</div>
+					</div>
+				</div>
+				<div class="row-12">
+					<div class="box">
+						
+					</div>					
+				</div>
 			</div>
-
-		</div>
+			
 		
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
