--- a/madrid.html
+++ b/madrid.html
@@ -42,9 +42,9 @@
 					<div class="col">
 						<div class="box">
 							<div class="w3-content w3-display-container" style="max-width:500px">
-								<img class="mySlides" src="images/madrid.jpg" style="width:100%">
-								<img class="mySlides" src="images/barcelona2.jpg" style="width:100%">
-								<img class="mySlides" src="images/barcelona3.jpg" style="width:100%">
+								<img class="mySlides" src="images/madrid3.jpg" style="width:100%">
+								<img class="mySlides" src="images/madrid1.jpg" style="width:100%">
+								<img class="mySlides" src="images/madrid2.jpg" style="width:100%">
 								<div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
 									<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
 									<div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
@@ -61,9 +61,103 @@
 						</div>
 					</div>
 				</div>
-				<div class="row-12">
-					<div class="box">
-						
+				<div class="row">
+					<div class="col-4">
+						<div class="box">
+							<h2 align="center"><strong>GRAN VÍA</strong></h2>
+							<p style="text-align:justify">
+								<em>
+									La Gran Vía es la calle más conocida de Madrid. Históricamente ha recibido muchos otros nombres, como Avenida de Rusia o Avenida 
+									del Quince y Medio. El más trascendente fue Avenida de José Antonio, en homenaje a José Antonio Primo de Rivera por su victoria en 
+									la Guerra Civil.
+									<br>
+									La historia de la Gran Vía tardó en arrancar. Los primeros bocetos datan de 1862, época en que se reformó parte del centro histórico 
+									madrileño, pero el diseño final no llegó hasta 1899, cuando los arquitectos José López Salaberry y Francisco Octavio Palacios 
+									presentaron el proyecto. 
+									<br>
+									La construcción de la Gran Vía duró varias décadas, las obras comenzaron finalmente en 1910 y terminaron
+									en 1929.
+									La Gran Vía ha sido una de las obras más trascendentes de España, ya que hubo que demoler más de 300 casas y afectó a casi 50 calles. 
+									Gracias a la Gran Vía se consiguió una mejor comunicación entre el centro de Madrid (Calle Alcalá) y el noroeste de la ciudad 
+									(Plaza de España).
+								</em>
+							</p>
+							<p  align="center">¿Qué ver?</p>
+							<p style="text-align:justify">
+								Actualmente, en Gran Vía encontraremos básicamente tres tipos de establecimientos: restaurantes, tiendas de moda y cines. 
+								Aunque a día de hoy los cines están de capa caída y cada vez hay menos, en su apogeo, Gran Vía recibió el apodo del Broadway
+								madrileño.
+								<br>
+								Gran Vía es uno de los centros neurálgicos de Madrid y en ella podréis encontrar ambiente a cualquier hora del día durante todo e
+								l año. Algunos de los edificios más famosos de esta mítica calle madrileña son el Edificio Metrópolis y el Edificio Carrión, 
+								coronado por el famoso cartel de Schweppes que preside la Plaza del Callao.
+								<br>
+								El primer tramo, entre Alcalá y la Red de San Luis, estuvo dedicado desde el comienzo al comercio de lujo, a imitación de otras calles 
+								surgidas en el siglo XIX por toda Europa, como la Rue de la Paix (París); Regent Street (Londres) o la Galleria Vittorio Emanuele II 
+								(Milán). 
+								</em>
+							</p>
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="box">
+							<h2 align="center"><strong>RETIRO</strong></h2>
+							<p style="text-align:justify">
+								<em>
+									Con 125 hectáreas y más de 15000 árboles, el parque de El Retiro es un remanso verde en el centro de Madrid. 
+									Especial atención merecen algunos de sus jardines: el jardín de Vivaces, los jardines de Cecilio Rodríguez 
+									(jardines clasicistas con aires andaluces), los jardines del Arquitecto Herrero Palacios, la Rosaleda (colección de rosas) 
+									y el Parterre Francés con el Ciprés Calvo, el árbol más antiguo de Madrid, del que se dice que podría tener alrededor de 
+									400 años.
+									<br>
+									No es solo uno de los pulmones de Madrid, sino que ofrece también cultura, ocio y deporte a madrileños y visitantes. Entre sus elementos arquitectónicos e históricos más importantes se encuentran: el Estanque Grande que ofrece varias actividades, como barcas de remo, barco y aula solar y la Escuela Municipal de Piragüismo, dirigida a niños y jóvenes entre 7 y 17 años, el Palacio de Velázquez y el Palacio de Cristal, ambos utilizados actualmente como salas de exposición.
+									El Palacio de Cristal, pabellón romántico creado para dar cabida a una muestra de plantas exóticas en la Exposición de Filipinas de 1887, es uno de los principales
+									ejemplos de la arquitectura del hierro en España.
+									<br>
+									Además, El Retiro alberga esculturas y fuentes notables como son el monumento a Alfonso XII, proyecto del arquitecto José Grasés Riera
+									 -con un mirador desde el que disfrutar de unas bellas vistas de la ciudad- o el reservado de Fernando VII, situado en la esquina 
+									 de las calles O'Donnell y Menéndez Pelayo. Este último incluye la Casa del Pescador, la Montaña Artificial y la Casa 
+									 del Contrabandista (que ahora acoge Florida Retiro, un moderno multiespacio dedicado al ocio y la hostelería que durante años 
+									 albergó la antigua sala de fiestas Florida Park), que le confieren un aire romántico.
+									Destacan además, la estatua de El Ángel caído; única escultura en el mundo que representa al diablo, 
+									la fuente de los Galápagos, que conmemora el nacimiento de Isabel II, la sorprendente Ermita de San Pelayo y San Isidoro, 
+									el Bosque del Recuerdo, en homenaje a las víctimas de los atentados terroristas sucedidos en Madrid el 11 de marzo de 2004,
+									y el Teatro de Títeres, un teatro único en Europa con programación estable todos los fines de semana.
+								</em>
+							</p>	
+						</div>
+					</div>
+					<div class="col-4">
+						<div class="box">
+							<h2 align="center"><strong>PALACIO REAL</strong></h2>
+							<p style="text-align:justify">
+								<em>
+									El Palacio Real de Madrid es la residencia oficial del rey de España; no obstante, los actuales reyes no habitan en él, sino en el 
+									Palacio de la Zarzuela, por lo que es utilizado para ceremonias de Estado y actos solemnes.
+									Con una extensión de 199 000 m² y 3478 habitaciones (en superficie, casi el doble que el Palacio de Buckingham o el Palacio de Versalles),
+									es el palacio real más grande de Europa Occidental,2​ y uno de los más grandes del mundo. Alberga un valioso patrimonio histórico-artístico, 
+									destacando el conjunto de instrumentos musicales conocido como los Stradivarius Palatinos, y colecciones muy relevantes de otras disciplinas 
+									como pintura, escultura y tapicería. Las salas de Estado y las colecciones artísticas están abiertas a las visitas siempre que no haya actos 
+									oficiales.
+									<br>
+									Es conocido también como Palacio de Oriente, a pesar de estar situado en la parte más occidental de Madrid, debido a su ubicación en la plaza 
+									de Oriente, llamada así al estar situada al este del palacio. A eje con el palacio, y enfrentado, se encuentra al otro extremo de la plaza
+									el Teatro Real.
+									<br>
+									El palacio fue construido por orden del rey Felipe V, sobre el solar dejado por el Real Alcázar, destruido casi del todo por un incendio en 
+									1734. Tanto los cimentos del antiguo alcázar como alguna de sus estructuras fueron utilizadas para la construcción del nuevo palacio. 
+									El episodio del incendio sirvió para justificar la sustitución del viejo edificio por un palacio acorde al gusto de la época. 
+									Su construcción comenzó en 1738, según trazas del arquitecto Filippo Juvara, quien proponía un palacio mayor pero en una ubicación diferente. 
+									Al morir Juvara, se encomendó el proyecto a su discípulo Juan Bautista Sachetti, a quien se exigió adaptar los planos de Juvara al solar 
+									del antiguo Alcázar. 
+									<br>
+									Otros distinguidos arquitectos españoles como Ventura Rodríguez participaron y se formaron en la cantera del nuevo 
+									palacio, a él se debe la configuración de la Real Capilla.5​ Francesco Sabatini se encargó de la conclusión del edificio, 
+									así como de obras secundarias de reforma, ampliación y decoración. Carlos III fue el primer monarca que habitó de 
+									forma continua el palacio.
+								</em>
+							</p>	
+						</div>
 					</div>					
 				</div>
 			</div>
