Guias acabadas, login encajado

--- a/guiasturisticas.html
+++ b/guiasturisticas.html
@@ -1,16 +1,12 @@
 <!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Guias Turisticas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/propio.css" />
+		<link rel="stylesheet" href="assets/ css/propio.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -41,12 +37,12 @@
 					<div class="box">						
 						<div class="row">
 							<div class="col-6">
-								<a target="_blank" href="madrid.html">
+								<a target="_blank" href="guias/madrid.html">
 									<img src="images/madrid.jpg"  width="500" height="300">
 								</a>							
 							</div>
 							<div class="col-6">
-								<a href="">
+								<a target="_blank" href="guias/zaragoza.html">
 									<img src="images/zaragoza.jpg" width="500" height="300">
 								</a>												
 							</div>
@@ -54,12 +50,12 @@
 						<br>
 						<div class="row">
 							<div class="col-6">									
-								<a target="_blank" href="">
+								<a target="_blank" href="guias/barcelona.html">
 									<img src="images/barcelona.jpg" width="500" height="300">
 								</a>																
 							</div>
 							<div class="col-6">								
-								<a target="_blank" href="">
+								<a target="_blank" href="guias/ibiza.html">
 									<img src="images/ibiza.jpg" width="500" height="300">
 								</a>	
 							</div>						
@@ -72,13 +68,13 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+			<script src="/assets/js/jquery.min.js"></script>
+			<script src="/assets/js/jquery.dropotron.min.js"></script>
+			<script src="/assets/js/jquery.scrollex.min.js"></script>
+			<script src="/assets/js/browser.min.js"></script>
+			<script src="/assets/js/breakpoints.min.js"></script>
+			<script src="/assets/js/util.js"></script>
+			<script src="/assets/js/main.js"></script>
 
 	</body>
 </html>
