--- a/guias/madrid.html
+++ b/guias/madrid.html
@@ -5,8 +5,8 @@
 		<title>MADRID</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/css/propio.css" />
+		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/propio.css" />
 		<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 	</head>
 	<body class="is-preload">
@@ -36,15 +36,15 @@
 				<div class="row">
 					<div class="col-4">
 						<div class="box">
-							<img src="images/lado1.jpg" style="width:100%">
+							<img src="../images/lado1.jpg" style="width:100%">
 						</div>
 					</div>
 					<div class="col">
 						<div class="box">
 							<div class="w3-content w3-display-container" style="max-width:500px">
-								<img class="mySlides" src="images/madrid3.jpg" style="width:100%">
-								<img class="mySlides" src="images/madrid1.jpg" style="width:100%">
-								<img class="mySlides" src="images/madrid2.jpg" style="width:100%">
+								<img class="mySlides" src="../images/madrid3.jpg" style="width:100%">
+								<img class="mySlides" src="../images/madrid1.jpg" style="width:100%">
+								<img class="mySlides" src="../images/madrid2.jpg" style="width:100%">
 								<div class="w3-center w3-container w3-section w3-large w3-text-white w3-display-bottommiddle" style="width:100%">
 									<div class="w3-left w3-hover-text-khaki" onclick="plusDivs(-1)">&#10094;</div>
 									<div class="w3-right w3-hover-text-khaki" onclick="plusDivs(1)">&#10095;</div>
@@ -57,7 +57,7 @@
 					</div>
 					<div class="col-4">
 						<div class="box">
-							<img src="images/lado2.jpg" style="width:100%">
+							<img src="../images/lado2.jpg" style="width:100%">
 						</div>
 					</div>
 				</div>
@@ -164,14 +164,9 @@
 			
 		
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-			<script src="assets/js/slide.js"></script>
+			
+			<script src="../assets/js/main.js"></script>
+			<script src="../assets/js/slide.js"></script>
 
 	</body>
 </html>
