--- a/guiasturisticas.html
+++ b/guiasturisticas.html
@@ -1,12 +1,15 @@
 <!DOCTYPE HTML>
-
+<!--
+	Alpha by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 	<head>
 		<title>Guias Turisticas</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="stylesheet" href="assets/ css/propio.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -32,49 +35,44 @@
 			<!-- Main -->
 				<section id="main" class="container">
 					<header>
-						<h2>Guías Turísticas</h2>
+						<h2>Nuestra parte de Guias Turisticas</h2>
+						<h2>Estamos en obras...</h2>
 					</header>
-					<div class="box">						
-						<div class="row">
-							<div class="col-6">
-								<a target="_blank" href="guias/madrid.html">
-									<img src="images/madrid.jpg"  width="500" height="300">
-								</a>							
-							</div>
-							<div class="col-6">
-								<a target="_blank" href="guias/zaragoza.html">
-									<img src="images/zaragoza.jpg" width="500" height="300">
-								</a>												
-							</div>
-						</div>
-						<br>
-						<div class="row">
-							<div class="col-6">									
-								<a target="_blank" href="guias/barcelona.html">
-									<img src="images/barcelona.jpg" width="500" height="300">
-								</a>																
-							</div>
-							<div class="col-6">								
-								<a target="_blank" href="guias/ibiza.html">
-									<img src="images/ibiza.jpg" width="500" height="300">
-								</a>	
-							</div>						
-						</div>					
-					</div>							
-					</section>
+					<div class="row">
+						<div class="col-12">
 
-			
+							<!-- Text -->
+								<section class="box">
+																	
+								</section>
+
+						</div>
+					</div>
+					<div class="row">
+						<div class="col-12">
+
+							
+				</section>
+
+			<!-- Footer -->
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="https://www.facebook.com/" target="_blank" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="https://www.instagram.com/" target="_blank" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+					</ul>
+				</footer>
+			<!-- end Footer -->
 
 		</div>
 
 		<!-- Scripts -->
-			<script src="/assets/js/jquery.min.js"></script>
-			<script src="/assets/js/jquery.dropotron.min.js"></script>
-			<script src="/assets/js/jquery.scrollex.min.js"></script>
-			<script src="/assets/js/browser.min.js"></script>
-			<script src="/assets/js/breakpoints.min.js"></script>
-			<script src="/assets/js/util.js"></script>
-			<script src="/assets/js/main.js"></script>
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.dropotron.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/browser.min.js"></script>
+			<script src="assets/js/breakpoints.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
